--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </header>
         <div data-elementor-type="wp-page" data-elementor-id="434" class="elementor elementor-434">
           <div class="elementor-element elementor-element-01434a0 e-grid e-con-boxed e-con e-parent hero-banner pt-3" data-id="01434a0" data-element_type="container" style="background: linear-gradient(135deg, #0f2027, #2c5364, #203a43); color: #fff;">
-            <div class="e-con-inner">
+            <div class="px-5">
               <div class="elementor-element elementor-element-cceb177 e-grid e-con-full e-con e-child" data-id="cceb177">
                 <div class="elementor-element elementor-element-fda6c62">
                   <div class="row">
